Adds more requested changes